Bug 240665 Can't navigate through some page lines using left or right arrow r=aaronleventhal, sr=henry.jia Patch by ginn.chen@sun.com